# battlebitforge

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yml  package.json  run.sh  turbo.json
.changeset/: config.json  cuddly-dolls-notice.md
apps/scraper/: CHANGELOG.md  Cargo.toml  README.md  dump.json  package.json  tsconfig.json
apps/scraper/data/1689295106504/: seed.json  slots.json  weapons.json
apps/scraper/data/1689326921868/: seed.json  slots.json  weapons.json
apps/scraper/data/1689340190635/: attachments.json  seed.json  slots.json  weapons.json
apps/scraper/src/: bootstrap.ts  get-unique-attachments.ts  get-unique-slots.ts  index.ts  main.rs  scrape.ts  scraped-weapon.ts  scraper.ts
apps/scraper/src/mappers/: attachment-map.ts  slot-map.ts
apps/web/: CHANGELOG.md  next.config.js  package.json  postcss.config.js  tsconfig.json
apps/web/app/: page.tsx
apps/web/src/: middleware.ts
apps/web/src/app/: footer.tsx  header.tsx  layout.tsx  page.tsx
apps/web/src/app/(home)/: page.tsx
apps/web/src/app/api/auth/[...nextauth]/: route.ts
apps/web/src/app/api/forge/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/loadouts/[slug]/votes/: route.ts
apps/web/src/app/api/scraper/: route.ts
apps/web/src/app/forge/: page.tsx
apps/web/src/app/loadouts/[slug]/: page.tsx
apps/web/src/app/my-loadouts/: page.tsx
docs/: CONTRIBUTING.md
